feat: endpoint to retrieve Stripe plans
